# torch-plugin-FL

./: .gitignore  CMakeLists.txt  README  README.md  pyproject.toml  setup.py  test.py  test_qwen3.py  test_qwen3_train.py
.github/workflows/: build-wheel-cuda.yml  build-wheel-maca.yml  build-wheel.yml  ci.yml  integration-test-cuda.yml  integration-test-maca.yml  integration-test.yml
cmake/: TorchPythonTargets.cmake
csrc/: CMakeLists.txt
csrc/aten/: FlagosMinimal.cpp
csrc/aten/native/: Common.h  Minimal.cpp  Minimal.h
csrc/runtime/: FlagosDeviceAllocator.cpp  FlagosDeviceAllocator.h  FlagosException.h  FlagosFunctions.cpp  FlagosFunctions.h  FlagosGenerator.cpp  FlagosGenerator.h  FlagosGuard.cpp  FlagosGuard.h  FlagosHooks.cpp  FlagosHooks.h  FlagosHostAllocator.cpp  FlagosHostAllocator.h
include/: Macros.h
tests/: test.py  test_qwen.sh  test_qwen3_infer.py  test_qwen3_train.py  test_qwen3_train_baseline.py  test_qwen3_train_ddp.py  test_qwen3_train_ddp_flagcx.py  test_qwen3_train_fsdp.py  test_qwen3_train_fsdp_flagcx.py
tests/cuda/: test_ops.py  test_qwen3_infer.py  test_qwen3_train.py
tests/integration/: conftest.py  test_ops.py  test_qwen3_infer.py  test_qwen3_train.py
tests/legacy/: lines.sh  test.py
tests/maca/: test_ops.py  test_qwen3_infer.py  test_qwen3_train.py
tests/manual/: dummy_dataset.py  test.py  test_qwen.sh  test_qwen3_infer.py  test_qwen3_train.py
torch_flagos/: __init__.py  _maca_compat.py  _maca_cudart_shim.py  distributed.py  integration.py
torch_flagos/csrc/: CMakeLists.txt  Module.cpp
torch_flagos/flagos/: __init__.py  meta.py  random.py
